fix white spaces on trackpad scroll

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,12 +1,18 @@
 // RESET
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+// On MACOS, avoid trackpad to cause white space at the bottom on scroll
+html,
+body {
+    overflow: hidden;
 }
 
 html {
-  color: #000000;
-  background: #ffffff;
+    color: #000000;
+    background: #ffffff;
 }
 body,
 div,
@@ -33,16 +39,16 @@ p,
 blockquote,
 th,
 td {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 table {
-  border-spacing: 0;
-  border-collapse: collapse;
+    border-spacing: 0;
+    border-collapse: collapse;
 }
 fieldset,
 img {
-  border: 0;
+    border: 0;
 }
 address,
 caption,
@@ -52,20 +58,20 @@ dfn,
 em,
 th,
 var {
-  font-style: normal;
-  font-weight: 400;
+    font-style: normal;
+    font-weight: 400;
 }
 ol,
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 caption,
 th {
-  text-align: left;
+    text-align: left;
 }
 h1,
 h2,
@@ -73,49 +79,49 @@ h3,
 h4,
 h5,
 h6 {
-  font-size: 100%;
-  font-weight: 400;
+    font-size: 100%;
+    font-weight: 400;
 }
 q:before,
 q:after {
-  content: "";
+    content: '';
 }
 abbr,
 acronym {
-  font-variant: normal;
-  border: 0;
+    font-variant: normal;
+    border: 0;
 }
 sub {
-  vertical-align: text-bottom;
+    vertical-align: text-bottom;
 }
 figure {
-  margin: 0;
+    margin: 0;
 }
 input,
 textarea,
 select {
-  font-family: inherit;
-  font-size: inherit;
+    font-family: inherit;
+    font-size: inherit;
 
-  font-weight: inherit;
+    font-weight: inherit;
 }
 
 input {
-  border-radius: 0;
-  -webkit-appearance: none;
+    border-radius: 0;
+    -webkit-appearance: none;
 }
 legend {
-  color: #000000;
+    color: #000000;
 }
 #yui3-css-stamp.cssreset {
-  display: none;
+    display: none;
 }
 
 button {
-  display: inline-block;
-  margin: 0;
-  font-size: rem(16);
-  text-decoration: none;
-  background-color: #ffffff;
-  border: none;
+    display: inline-block;
+    margin: 0;
+    font-size: rem(16);
+    text-decoration: none;
+    background-color: #ffffff;
+    border: none;
 }
